--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,6 +14,10 @@ format:
     theme: cosmo
     css: styles.css
     toc: true
+    
+comments:
+  giscus: 
+    repo: NeuroShepherd/NeuroShepherd.github.io.discussion
 
 
 
