Change discussion destination

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,7 +17,7 @@ format:
     
 comments:
   giscus: 
-    repo: NeuroShepherd/NeuroShepherd.github.io.discussion
+    repo: NeuroShepherd/NeuroShepherd.github.io
     category: "Blog Post Comments"
     mapping: "pathname"
 
