Create a footer and udpated site layout

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,12 +1,22 @@
 project:
   type: website
+  
 
 website:
-  title: "NeuroShepherd"
+  title: "NeuroShepherd's Blog"
   site-url: "https://neuroshepherd.github.io"
   search: true
   description: "A collection of data projects and blog posts about cool programming things"
-  page-footer: "Footer in progress"
+  page-footer: 
+    center : |
+        NeuroShepherd's Blog <br>
+        A collection of data projects and blog posts about programming.
+        <ul class="footer-links">
+          <li><a href="https://github.com/NeuroShepherd">GitHub</a></li>
+          <li><a href="https://neuroshepherd.github.io/posts.xml">RSS Feed</a></li>
+          <li><a href="about.qmd">About</a></li>
+        </ul>
+        &copy; 2025 NeuroShepherd. All rights reserved.
   announcement: 
     icon: info-circle
     dismissable: true
@@ -14,16 +24,25 @@ website:
     type: primary
     position: below-navbar
   navbar:
+    title: false
+    logo: images/neuroshepherd.png
+    logo-alt: "NeuroShepherd Logo"
+    # logo-href: index.qmd # can put a silly different link here if desired
     left:
       - href: index.qmd
         text: Home
       - about.qmd
       - posts.qmd
     right:
-      - icon: github
-        href: https://github.com/NeuroShepherd
       - icon: rss
         href: posts.xml
+    tools:
+      - icon: github
+        menu: 
+          - text: GitHub Profile
+            href: https://github.com/NeuroShepherd
+          - text: Source Code
+            href: https://github.com/NeuroShepherd/neuroshepherd.github.io
 
       
 format:
@@ -32,12 +51,15 @@ format:
     css: styles.css
     toc: true
     toc-depth: 3
-    # include-after-body: footer.html
     grid:
       sidebar-width: 300px
       body-width: 900px
       margin-width: 200px
       gutter-width: 1.5rem
+    linestretch: 1.25
+    fontsize: 1.08em
+    respect-user-color-scheme: true
+    linkcolor: "#F97316"
 
 
 
