--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,7 +14,7 @@ website:
         <ul class="footer-links">
           <li><a href="https://github.com/NeuroShepherd">GitHub</a></li>
           <li><a href="https://neuroshepherd.github.io/posts.xml">RSS Feed</a></li>
-          <li><a href="about.qmd">About</a></li>
+          <li><a href="/about.html">About</a></li>
         </ul>
         &copy; 2025 NeuroShepherd. All rights reserved.
   announcement: 
@@ -33,6 +33,8 @@ website:
         text: Home
       - about.qmd
       - posts.qmd
+      # - open_science.qmd
+      # - fun_projects.qmd
     right:
       - icon: rss
         href: posts.xml
@@ -61,9 +63,7 @@ format:
     fontsize: 1.08em
     respect-user-color-scheme: true
     linkcolor: "#F97316"
-    title-prefix: ""
-    
-
+    title-prefix: "NeuroShepherd 🐶"
 
 
 
