--- a/.github/workflows/_publish.yml
+++ b/.github/workflows/_publish.yml
@@ -14,8 +14,42 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            libcurl4-openssl-dev \
+            libssl-dev \
+            libxml2-dev \
+            libpng-dev \
+            libjpeg-dev \
+            libtiff-dev \
+            libcairo2-dev \
+            libxt-dev \
+            libfreetype6-dev \
+            libharfbuzz-dev \
+            libfribidi-dev \
+            zlib1g-dev \
+            libv8-dev \
+            libglpk-dev \
+            librsvg2-bin
+
+
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
+      
+      - name: Install TinyTeX
+        run: quarto install tinytex
+
+      - name: Install R
+        uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: renv
+
+      - name: Install R Dependencies
+        uses: r-lib/actions/setup-renv@v2
+        with:
+          cache-version: 1
 
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
