Create basic Fun Projects page with a card layout for each project in the yaml file

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -34,7 +34,7 @@ website:
       - about.qmd
       - posts.qmd
       # - open_science.qmd
-      # - fun_projects.qmd
+      - fun_projects.qmd
     right:
       - icon: rss
         href: posts.xml
