--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,7 @@ rsconnect/
 .quarto
 _site/
 _outline.md
+_freeze/
 
 # ignore the images used for making up the banners
 images/home_banner/assets/
