Set up code folding and direct to correct file from the Fun Projects page

--- a/posts/_metadata.yml
+++ b/posts/_metadata.yml
@@ -19,6 +19,9 @@ format:
       margin-width: 150px
       gutter-width: 1.5rem
     code-overflow: wrap
+    code-fold: true
+    code-summary: "Show Me Your Code Secrets"
+    code-tools: true
 
 toc: true
 toc-location: left
