--- a/fun_projects.yaml
+++ b/fun_projects.yaml
@@ -13,7 +13,7 @@
     I had to take a test. I was tired of studying during vacation so I did what any reasonable person would do: 
     I made a Monte Carlo simulation to see if I could stop studying.
   image: images/neuroshepherd.png
-  url: https://example.com
+  url: /posts/monte_carlo_passing_test.qmd
   tags: [R, simulations, probability, data visualization, procrastination]
 
 
