Update some metadata

--- a/fun_projects.yaml
+++ b/fun_projects.yaml
@@ -5,7 +5,7 @@
     Specifically, I wanted to see which teams do the best job of developing sprinters. Take a look!
   image: images/neuroshepherd.png
   url: https://example.com
-  tags: [R, SQLite, webscraping, linear mixed models, patience]
+  tags: [in-progress!, R, SQLite, webscraping, linear mixed models, patience]
 
 
 - title: Have I Studied Enough to Pass?
