Set various additonla Posts defaults and add equations to MC simulation post

--- a/fun_projects.yaml
+++ b/fun_projects.yaml
@@ -12,7 +12,7 @@
   description: |
     I had to take a test. I was tired of studying during vacation so I did what any reasonable person would do: 
     I made a Monte Carlo simulation to see if I could stop studying.
-  image: images/neuroshepherd.png
+  image: /posts/monte_carlo_passing_test_files/figure-html/fig-sigmoid-derivatives-1.png
   url: /posts/monte_carlo_passing_test.qmd
   tags: [R, simulations, probability, data visualization, procrastination]
 
