Add link to hex sticker for ordinalsimr post

--- a/fun_projects.yaml
+++ b/fun_projects.yaml
@@ -31,6 +31,6 @@
     This is my first R package, which I developed and released on CRAN in 2025.
     It provides a Shiny application for simulating ordinal data, and running a variety of statistical tests suited for ordinal data.
     It was a challenging project that taught me a lot about R package development and Shiny applications
-  image: images/neuroshepherd.png
+  image: https://raw.githubusercontent.com/NeuroShepherd/ordinalsimr/master/inst/app/www/favicon.png
   url: https://neuroshepherd.github.io/ordinalsimr
   tags: [R package, Shiny, development, CRAN, ordinal data, simulations]
